31 March 2021: Wouter
	- Fix stack-protector change to not override other CFLAGS options.

30 March 2021: George
	- Disable the use of stack-protector for cross compiled 32-bit windows
	  builds; relates to #444.

25 March 2021: Wouter
	- Fix #429: Also fix end of transfer for http download of auth zones.

24 March 2021: Wouter
	- Fix deprecation test to work for iOS TVOS and WatchOS, it uses
	  CFLAGS and CPPFLAGS and also checks if the item is unavailable.
	- Travis, fix script to fail when tasks fail.
	- Travis, fix warning in ubsan compile.
	- Fix configure Targetconfiditionals.h header check, to use compile.
	- Fix that cachedb does not produce empty object files when disabled.

23 March 2021: Wouter
	- Travis enable all tests again. Clang analyzer only a couple times,
	  when there is a difference. homebrew updates disabled, so it does
	  not hang. removed trailing slashes from configure paths. Moved iOS
	  tests to allow-failure.
	- travis, analyzer disabled on test without debug, that does not
	  run anway.  Turn off failing tests except one.  Update iOS test
	  to xcode image 12.2.

22 March 2021: George
	- Fix unused-function warning when compiling with --enable-dnscrypt.
	- Fix for #367: fix memory leak when cannot bind to listening port.
	- Reformat pythonmod/pythonmod_utils.{c,h}.

22 March 2021: Wouter
	- Merge #449 from orbea: build: Add missing linker flags.
	- iana portlist update.
	- Comment out nonworking OSX and IOS travis tests, vm fails to start.
	- Fix compile error in listen_dnsport on Android.
	- Fix memory leak reported by asan in rpz SOA record query name.

19 March 2021: Wouter
	- Fix for #447: squelch connection refused tcp connection failures
	  from the log, unless verbosity is high.

17 March 2021: Wouter
	- Fix #441: Minimal NSEC range not accepted for top level domains.

11 March 2021: Wouter
	- Fix parse of LOC RR type for decimetres.

5 March 2021: Wouter
	- Workaround for #439: prevent loops in the reuse rbtree.