@@ -1,3 +1,6 @@
+31 March 2021: George
+	- Clean makedist.sh.
+
 31 March 2021: Wouter
 	- Fix stack-protector change to not override other CFLAGS options.
 
